fix jvmArgs